# terraform-provider-helloworld

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  envs.md  make-release.py  requirements.in  requirements.txt  terraform
.github/workflows/: ci.yml
src/: main.rs  server.rs
tests/: run_tf_test.rs
tf/: .terraformrc  main.tf
