[package]
name = "terraform-provider-helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = {version = "0.6", features = ["tls"] }
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
futures = "0.3"
anyhow = "1"

[build-dependencies]
tonic-build = "0.6"
