[package]
name = "terraform-provider-helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = {version = "0.6", features = ["tls"] }
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
futures = "0.3"
futures-core = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "fmt", "std"] }
rcgen = "0.8"
base64 = "0.13"
tower-http = {version = "0.1", features=["trace"] }

[build-dependencies]
tonic-build = "0.6"
